--- a/chef/cookbooks/php56u-ius/templates/default/15-xdebug.ini.erb
+++ b/chef/cookbooks/php56u-ius/templates/default/15-xdebug.ini.erb
@@ -1,4 +1,7 @@
 ; Enable xdebug extension module
-zend_extension=/usr/lib64/php/modules/xdebug.so
+zend_extension=xdebug.so
+
 xdebug.remote_enable = 1
 xdebug.remote_host = "10.0.2.2"
+
+; see http://xdebug.org/docs/all_settings
